--- a/src/main/filters/develop.properties
+++ b/src/main/filters/develop.properties
@@ -1,5 +1,5 @@
 #db
-limer.dbUrl=jdbc\:mysql\://localhost\:3306/lebao?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=UTF-8&amp;characterSetResults=utf8
+limer.dbUrl=jdbc\:mysql\://172.27.0.14\:3306/lebao?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=UTF-8&amp;characterSetResults=utf8
 limer.dbName=lebao
 limer.user=root
 limer.charset=utf-8
