--- a/log4j.properties
+++ b/log4j.properties
@@ -29,7 +29,7 @@ log4j.appender.lebaostat.layout.ConversionPattern=%p %d{yyyy-MM-dd HH:mm:ss,SSS}
 log4j.appender.lebaostat.File=${catalina.base}/logs/lebao-stat.log
 
 log4j.appender.lebaoweb=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.lebaoweb.Threshold=INFO
+log4j.appender.lebaoweb.Threshold=DEBUG
 log4j.appender.lebaoweb.encoding=UTF-8
 log4j.appender.lebaoweb.layout=org.apache.log4j.PatternLayout
 log4j.appender.lebaoweb.layout.ConversionPattern=%p %d{yyyy-MM-dd HH:mm:ss,SSS} %C(%L): %m%n
