--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,11 @@
 	    <artifactId>jedis</artifactId>
 	    <version>2.9.0</version>
 	</dependency>
+	<dependency>
+	    <groupId>org.bouncycastle</groupId>
+	    <artifactId>bcprov-jdk15on</artifactId>
+	    <version>1.59</version>
+	</dependency>
   </dependencies>
   <repositories>
         <repository>
