--- a/src/main/filters/production.properties
+++ b/src/main/filters/production.properties
@@ -16,3 +16,6 @@ limer-servlet.jedisPassword=limer_jedis_pw20181007
 limer-servlet.jedisMaxTotal=50
 limer-servlet.jedisMaxIdle=30
 limer-servlet.jedisMinIdle=10
+
+#wx
+wx.pay.notifyurl=https://www.limer.cn/wx/paynotify
