--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,11 @@
 	    <artifactId>bcprov-jdk15on</artifactId>
 	    <version>1.59</version>
 	</dependency>
+	<dependency>
+        <groupId>org.weixin4j</groupId>
+        <artifactId>weixin4j</artifactId>
+        <version>0.1.3</version>
+    </dependency>
   </dependencies>
   <repositories>
         <repository>
