--- a/src/main/filters/production.properties
+++ b/src/main/filters/production.properties
@@ -18,4 +18,4 @@ limer-servlet.jedisMaxIdle=30
 limer-servlet.jedisMinIdle=10
 
 #wx
-wx.pay.notifyurl=https://www.limer.cn/wx/paynotify
+wx.pay.notifyurl=https://www.limer.cn/wxpay/paynotify
